// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconCollapse should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-collapse "
  height={13}
  viewBox="0 0 13 13"
  width={13}
>
  <path
    className="fill-color"
    d="M8 6h4a1 1 0 0 0 0-2H9V1a1 1 0 0 0-2 0v4a1 1 0 0 0 1 1zM1 9h3v3a1 1 0 0 0 2 0V8a1 1 0 0 0-1-1H1a1 1 0 0 0 0 2z"
    fill="#979797"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconCollapse should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-collapse test"
  height={100}
  title="title"
  viewBox="0 0 13 13"
  width={200}
>
  <path
    className="fill-color"
    d="M8 6h4a1 1 0 0 0 0-2H9V1a1 1 0 0 0-2 0v4a1 1 0 0 0 1 1zM1 9h3v3a1 1 0 0 0 2 0V8a1 1 0 0 0-1-1H1a1 1 0 0 0 0 2z"
    fill="#979797"
  />
</AccessibleSVG>
`;
